--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div id="widget">
-      <h2>Compartir</h2><br />
+      <h2>{% trans "Share" %}</h2><br />
       <script src="http://widgets.twimg.com/j/2/widget.js"></script>
         <script>
 new TWTR.Widget({
