--- a/src/e_cidadania/templates/not_allowed.html
+++ b/src/e_cidadania/templates/not_allowed.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<div id="grid_16">
-		{% trans "You're not allowed to access here." %}<br/><br/><br/>
+		{% trans "You are not allowed to access here." %}<br/><br/><br/>
 		<div>
 		    {% trans "You can go" %} <a href="/"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="/accounts/"><u>{% trans "back to your profile" %}</u></a>
 	  </div>
