--- a/src/e_cidadania/apps/spaces/templates/spaces/space_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_confirm_delete.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   {% block centercol %}
-    <div class="grid_16>
+    <div class="grid_16">
         <form action="" method="post">{% csrf_token %}
           <p>{% trans "Are you sure you want to delete this space? This action cannot be undone." %}</p>
 
