--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_list.html
@@ -16,10 +16,10 @@
         <div id="tools">
           <a href="add/">{% trans "Add" %}</a> | 
           {% if perms.proposals.edit_proposal %}
-            <a href="edit/{{ p.id }}">{% trans "Edit" %}</a> |
+            <a href="{{ p.id }}/edit/">{% trans "Edit" %}</a> |
           {% endif %}
           {% if perms.proposals.delete_proposal %}
-            <a href="delete/{{ p.id }}">{% trans "Delete" %}</a>
+            <a href="{{ p.id }}/delete/">{% trans "Delete" %}</a>
           {% endif %}
         </div>
         {% endif %}
@@ -28,7 +28,7 @@
         </div>
         <!-- Here goes the voting button -->
         <div id="proposal">
-          <div class="title"><a href="{{ request.path }}view/{{ p.id }}/">{{ p.title }}</a></div>
+          <div class="title"><a href="{{ request.path }}/{{ p.id }}/">{{ p.title }}</a></div>
           <div class="message">{{ p.message|truncatewords:12 }}</div>
           {% get_comment_count for p as comment_count %}
           <div class="creator">{% trans "proposed by " %} <a href="/accounts/{{ p.author }}">{{ p.author }}</a> {% trans " at " %} {{ p.pub_date|date:"j/m/Y G:i" }} | <a href="{{ request.path }}view/{{ p.id }}/">{{ comment_count }} {% trans "comments" %}</a></div>
