Added code to make AddSpace multipleform

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -56,6 +56,14 @@
 
         <hr />
 
+        <h3>{% trans "Entities participating" %}</h3>
+                  {% comment %}
+            Entity forms
+        {% endcomment %}
+
+
+          {{ entityform.as_p }}
+
         <p><input type="submit" value="{% trans 'Create' %}" /></p>
 
         <p><a href="/">&laquo; {% trans "Go back" %}</a></p>
