Finished the style guide and made minor fixes

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -62,7 +62,7 @@
         {% endcomment %}
 
 
-          {{ entityform.as_p }}
+          {{ entityform_1.as_p }}
 
         <p><input type="submit" value="{% trans 'Create' %}" /></p>
 
