Minor fixes to space multiple form

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -62,7 +62,9 @@
         {% endcomment %}
 
 
+          {{ entityform_0.as_p }}
           {{ entityform_1.as_p }}
+          {{ entityform_2.as_p }}
 
         <p><input type="submit" value="{% trans 'Create' %}" /></p>
 
