Partial fix ticket 70 and 71

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -61,11 +61,51 @@
             Entity forms
         {% endcomment %}
 
+        <div class="fieldWrapper">
+          <label for="id_0_name">{% trans "Name" %}:</label>
+          {{ entityform_0.name }}
+        </div>
+        <div class="fieldWrapper">
+          <label for="id_0_website">{% trans "Website" %}:</label>
+          {{ entityform_0.website }}
+        </div>
+        <div class="fieldWrapper">
+          <label for="id_0_logo">{% trans "Logotype" %}:</label>
+          {{ entityform_0.logo }}
+        </div>
 
-          {{ entityform_0.as_p }}
-          {{ entityform_1.as_p }}
-          {{ entityform_2.as_p }}
+        {{ entityform_0.space.as_hidden }}
 
+        <div class="fieldWrapper">
+          <label for="id_1_name">{% trans "Name" %}:</label>
+          {{ entityform_1.name }}
+        </div>
+        <div class="fieldWrapper">
+          <label for="id_1_website">{% trans "Website" %}:</label>
+          {{ entityform_1.website }}
+        </div>
+        <div class="fieldWrapper">
+          <label for="id_1_logo">{% trans "Logotype" %}:</label>
+          {{ entityform_1.logo }}
+        </div>
+
+        {{ entityform_1.space.as_hidden }}
+
+        <div class="fieldWrapper">
+          <label for="id_2_name">{% trans "Name" %}:</label>
+          {{ entityform_2.name }}
+        </div>
+        <div class="fieldWrapper">
+          <label for="id_2_website">{% trans "Website" %}:</label>
+          {{ entityform_2.website }}
+        </div>
+        <div class="fieldWrapper">
+          <label for="id_2_logo">{% trans "Logotype" %}:</label>
+          {{ entityform_2.logo }}
+        </div>
+
+        {{ entityform_2.space.as_hidden }}
+          
         <p><input type="submit" value="{% trans 'Create' %}" /></p>
 
         <p><a href="/">&laquo; {% trans "Go back" %}</a></p>
