--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -3,8 +3,8 @@
 {% load comments %}
 
 {% block title %}{{ get_place.name }} - {% trans "Index" %}{% endblock %}
-{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+{% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
 
@@ -67,7 +67,7 @@
           <ul>
             {% for doc in documents %}
               <li>
-                <a href="/{{ MEDIA_URL }}/{{ doc.docfile }}">{{ doc.title }}</a>
+                <a href="{{ MEDIA_URL }}/{{ doc.docfile }}">{{ doc.title }}</a>
                 {% if perms.spaces.edit_document %}
                   (<a href="{{ request.path }}docs/{{ doc.id }}/edit/">Edit</a> | 
                 {% if perms.spaces.delete_document %}
@@ -116,12 +116,12 @@
       
       <div id="widget">
         <h2>Compartir</h2><br />
-        <img src="/{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/>
-        <a href="http://www.facebook.com/cidadania.coop"><img src="/{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
+        <img src="{{ STATIC_URL }}/assets/logos/rss_logo.png" alt="Feed RSS"/>
+        <a href="http://www.facebook.com/cidadania.coop"><img src="{{ STATIC_URL }}/assets/logos/facebook_logo.png" alt="Facebook"/></a>
         <a href="http://www.twitter.com/ecidadaniafloss"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-b.png" alt="Seguir a ecidadaniafloss en Twitter"/></a>
-        <a href="http://tuenti.com"><img src="/{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
-        <a href="http://linkedin.com"><img src="/{{ STATIC_URL }}/assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
-        <a href="http://identi.ca/ecidadania"><img src="/{{ STATIC_URL }}/assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
+        <a href="http://tuenti.com"><img src="{{ STATIC_URL }}/assets/logos/tuenti_logo.png" alt="Compartir en Tuenti"/></a>
+        <a href="http://linkedin.com"><img src="{{ STATIC_URL }}/assets/logos/linkedin_logo.png" alt="Compartir en LinkedIn"/></a>
+        <a href="http://identi.ca/ecidadania"><img src="{{ STATIC_URL }}/assets/logos/identica_logo.png" alt="Compartir en Identi.ca"/></a>
         <p><br />{% trans "Your favourite social site isn't here? Tell us!" %}</p>
       </div>
 
@@ -133,7 +133,7 @@
 {% block footerimg %}
   {% for e in entities %}
     {% if e.logo %}
-      <a href="{{ e.website }}"><img src="/{{ MEDIA_URL }}/{{ e.logo }}" alt="Logo"/></a>
+      <a href="{{ e.website }}"><img src="{{ MEDIA_URL }}/{{ e.logo }}" alt="Logo"/></a>
     {% else %}
       <a href="{{ e.website }}">{{ e.name }}</a> -
     {% endif %}
