Fixed #72. URLs ewsolving to space when no URL was set.

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -135,7 +135,11 @@
     {% if e.logo %}
       <a href="{{ e.website }}"><img src="{{ MEDIA_URL }}/{{ e.logo }}" alt="Logo"/></a>
     {% else %}
-      <a href="{{ e.website }}">{{ e.name }}</a> -
+      {% if e.website %}
+        <a href="{{ e.website }}">{{ e.name }}</a> -
+      {% else %}
+        {{ e.name }} - 
+      {% endif %}
     {% endif %}
    
   {% endfor %}
