Fixed email templates from userprofile, added sites component, updated dashboard and spaces views

--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation_done.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% if successful %}{% trans 'E-mail validation successful' %}{% else %}{% trans 'E-mail change unsuccessful' %}{% endif %}{% endblock %}
