--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% if user.email %}{% trans "E-mail change" %}{% else %}{% trans "Add e-mail" %}{% endif %}{% endblock %}
