--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation_processed.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/email_validation_processed.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'E-mail change processed' %}{% endblock %}
