Major changes in the platform
Fixed lots of errors related with static files referencing, created edit view for
meetings, update spaces views and added contexts, tested user registration,
created fixtures for initial DB data, added tango icon set for edit/add/delete
icons isntead of using text.

--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_detail.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_detail.html
@@ -3,8 +3,8 @@
 {% load comments %}
 
 {% block title %}{% trans "View proposal" %} {{ proposal.id }} {% endblock %}
-{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+{% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
 
