--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_edit.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_edit.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Add proposal" %}{% endblock %}
-{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+{% block title %}{% trans "Edit meeting" %}{% endblock %}
+{% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
   <div class="grid_11">
