--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -13,12 +13,18 @@
     
       {% if perms.news.add_post %}
         <div id="tools">
-          <a href="{{ request.path }}news/add/"}>{% trans "Add news" %}</a> |
+          <a href="{{ request.path }}news/add/"}>
+            <img src="{{ STATIC_URL }}/assets/icons/add16.png" alt="{% trans 'Add new post' %}" title="{% trans 'Add new post' %}"/>
+          </a> 
           {% if perms.spaces.edit_space %}
-            <a href="{{ request.path }}edit/">{% trans "Edit space" %}</a> |
+            <a href="{{ request.path }}edit/">
+              <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit space' %}" title="{% trans 'Edit space' %}"/>
+            </a> 
           {% endif %}
           {% if perms.spaces.delete_space %}
-            <a href="{{ request.path }}delete/">{% trans "Delete space" %}</a>
+            <a href="{{ request.path }}delete/">
+              <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete space' %}" title="{% trans 'Delete space' %}"/>
+            </a>
           {% endif%}
         </div>
       {% endif %}
@@ -28,9 +34,13 @@
           <div class="post">
             {% if perms.news.edit_post %}
               <div id="tools">
-                <a href="{{ request.path }}news/{{ news.id }}/edit/">Edit</a> |
+                <a href="{{ request.path }}news/{{ news.id }}/edit/">
+                  <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
+                </a> 
                 {% if perms.news.delete_post %}
-                  <a href="{{ request.path }}news/{{ news.id }}/delete/">Delete</a>
+                  <a href="{{ request.path }}news/{{ news.id }}/delete/">
+                    <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
+                  </a>
                 {% endif %}
               </div>
             {% endif %}
@@ -69,10 +79,14 @@
               <li>
                 <a href="{{ MEDIA_URL }}/{{ doc.docfile }}">{{ doc.title }}</a>
                 {% if perms.spaces.edit_document %}
-                  (<a href="{{ request.path }}docs/{{ doc.id }}/edit/">Edit</a> | 
+                  <a href="{{ request.path }}docs/{{ doc.id }}/edit/">
+                    <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
+                  </a> 
                 {% if perms.spaces.delete_document %}
-                  <a href="{{ request.path }}docs/{{ doc.id }}/delete/">Delete</a>
-                {% endif %})
+                  <a href="{{ request.path }}docs/{{ doc.id }}/delete/">
+                    <img src="{{ STATIC_URL }}/assets/icons/delete16.png" alt="{% trans 'Delete' %}" title="{% trans 'Delete' %}"/>
+                  </a>
+                {% endif %}
                 {% endif %}
               </li>
             {% empty %}
