--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_list.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 
 {% block title %}{% trans "Meeting list" %}{% endblock %}
-{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
+{% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
 
