--- a/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_list.html
@@ -2,15 +2,13 @@
 {% load i18n %}
 
 {% block title %}{% trans "Spaces list" %}{% endblock %}
-{% block logo %}<img src="/{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
-{% block banner %}<img src="/{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
 
   {% block centercol %}
     <div class="grid_16">
       {% for space in object_list %}
-        <p><a href="/spaces/{{ space.name }}">{{ space.name }}</a></p>
+        <p><a href="/spaces/{{ space.url }}">{{ space.name }}</a></p>
       {% empty %}
         <p>{% trans "There are no spaces." %}</p>
       {% endfor %}
