--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/overview.html
@@ -117,7 +117,7 @@
           <h1>{% trans "Your spaces" %}</h1>
           <ul class="spaces">
             {% for space in user.get_profile.spaces.all %}
-              <li><a href="/spaces/{{ space }}">{{ space }}</a></li>
+              <li><a href="/spaces/{{ space.url }}">{{ space.name }}</a></li>
             {% empty %}
               <p>{% trans "You are not signed to any space." %}</p>
             {% endfor %}
