Fixed #81 NoneType error. Also some minor changes to site index and css

--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -283,6 +283,11 @@ input[type="text"], input[type="password"] {
     text-align: right;
 }
 
+.general {
+    border: 1px solid #FEFFB2;
+    background: #FEFFCC;
+}
+
 .header {
     border-bottom: 3px solid #000;
     margin-bottom: 20px;
