--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_detail.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_detail.html
@@ -9,6 +9,11 @@
 
   {% block centercol %}
     <div class="grid_11">
+    
+      <div id="contenttitles">
+        {% trans "View meeting" %}
+      </div>
+      
       <p>{% trans "Title" %}</p>
       <p>{{ meeting.title }}</p>
       <p>{% trans "Description" %}</p>
