--- a/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_add.html
@@ -9,6 +9,11 @@
 
   {% block centercol %}
     <div class="grid_11">
+    
+      <div id="contenttitles">
+        {% trans "Upload new document" %}
+      </div>
+      
       <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
       
         {{ form.non_field_errors }}
@@ -29,11 +34,10 @@
         {{ form.space.as_hidden }}
         {{ form.author.as_hidden }}
 
-        <p>
+        <hr />
+        <p class="buttons">
           <input type="submit" value="{% trans 'Upload' %}" />
-          <div class="pagebutton">
-            <a href="../../">&laquo; {% trans "Go back" %}</a>
-          </div>
+          <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
         </p>
       </form>
     </div>
