--- a/src/e_cidadania/apps/spaces/templates/spaces/document_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_confirm_delete.html
@@ -9,11 +9,20 @@
 
   {% block centercol %}
     <div class="grid_16">
+    
+      <div id="contenttitles">
+        {% trans "Delete document" %}
+      </div>
+      
         <form action="" method="post">{% csrf_token %}
-          <p>{% trans "Are you sure you want to delete this document? This action cannot be undone." %}</p>
+          <p>{% trans "Are you sure you want to delete this document? This action cannot be undone." %}</p><br/>
 
-          <p><input type="submit" value="{% trans 'Delete' %}" /></p>
-          <p><a href="/">&laquo; {% trans "Go back" %}</a></p>
+          <hr />
+          <p class="buttons">
+            <input type="submit" value="{% trans 'Delete' %}" />
+            <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
+          </p>
+
         </form>
     </div>
 
