--- a/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/document_list.html
@@ -9,15 +9,20 @@
 
   {% block centercol %}
     <div class="grid_16">
+    
+      <div id="contenttitles">
+        {% trans "Document list" %}
+      </div>
+      
       {% for doc in document_list %}
-        <p><a href="{{ doc.docfile }}">{{ doc.title }}</a></p>
-        <p>{% trans "Published" %} {{ doc.pub_date }}</p>
+        <p><a href="{{ MEDIA_URL}}{{ doc.docfile.url }}"><strong>{{ doc.title }}</strong></a> <em>{% trans "published" %} {{ doc.pub_date }}</em></p>
       {% empty %}
         <p>{% trans "There are no documents in this space." %}</p>
       {% endfor %}
-      <div class="pagebutton">
-        <a href="../">{% trans "Go back" %}</a>
-      </div>
+      <hr />
+      <p>
+        <a href="../" class="pagebutton">{% trans "Go back" %}</a>
+      </p>
     </div>
   {% endblock %}
 
