--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_confirm_delete.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Delete proposal" %}{% endblock %}
+{% block title %}{% trans "Delete meeting" %}{% endblock %}
 {% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
 {% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
@@ -9,11 +9,20 @@
 
   {% block centercol %}
     <div class="grid_11">
+    
+      <div id="contenttitles">
+        {% trans "Delete meeting" %}
+      </div>
+      
         <form action="" method="post">{% csrf_token %}
           <p>{% trans "Are you sure you want to delete this meeting? This action cannot be undone." %}</p>
 
-          <p><input type="submit" value="{% trans 'Delete' %}" /></p>
-          <p><a href="/">&laquo; {% trans "Go back" %}</a></p>
+          <hr />
+          <p class="buttons">
+            <input type="submit" value="{% trans 'Delete' %}" />
+            <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
+          </p>
+          
         </form>
     </div>
 
