--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -77,10 +77,10 @@
         </div>
         {% endfor %}
         
-        <hr />  
+        <hr />
         <p class="buttons">
           <input type="submit" value="{% trans 'Create' %}" />
-          <a href="/" class="pagebutton">{% trans "Cancel" %}</a>
+          <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
         </p>
 
       </form>
